add schedule for enterprise sync

--- a/.github/workflows/enterprise.yml
+++ b/.github/workflows/enterprise.yml
@@ -1,8 +1,8 @@
 name: 'Odoo Enterprise Usptream Sync'
 
-on: push
-  #schedule:
-    #- cron:  '0 7 * * 1,4'
+on:
+  schedule:
+    - cron:  '0 7 * * 1,4'
 
 jobs:
   git-sync:
