--- a/.github/workflows/odoo.yml
+++ b/.github/workflows/odoo.yml
@@ -2,6 +2,7 @@ name: 'Odoo Upstream Sync'
 
 on:
   schedule:
+    - workflow_dispatch
     - cron:  '0 7 * * 1,4'
 
 jobs:
@@ -12,7 +13,7 @@ jobs:
         uses: wei/git-sync@v3
         with:
           source_repo: "odoo/odoo"
-          source_branch: "14.0"
+          source_branch: "refs/remotes/source/1*"
           destination_repo: "cibex/odoo"
-          destination_branch: "14.0"
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} # optional
+          destination_branch: "refs/heads/1*"
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
